--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
-  <link rel="stylesheet" href="css/style.css">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -20,13 +19,16 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand me-5" href="#">
           <img src="images/logo.svg" alt="snap logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,23 +36,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Features</a>
+            <li class="nav-item mx-2">
+              <a class="nav-link active" aria-current="page" href="#"><strong>Features</strong></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Company</a>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="#"><strong>Company</strong></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Careers</a>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="#"><strong>Careers</strong></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link">About</a>
+            <li class="nav-item mx-2">
+              <a class="nav-link"><strong>About</strong></a>
             </li>
           </ul>
         </div>
         <div>
-            <button class="btn btn-outline-success me-2" type="button">Login</button>
-            <button class="btn btn-outline-success me-2" type="button">Register</button>
+            <button class="btn me-2" type="button"><strong>Login</strong></button>
+            <button class="btn btn-outline-secondary rounded-3 py-2 px-3 ms-2" type="button"><strong>Register</strong></button>
         </div>
       </div>
     </nav>
@@ -67,7 +69,7 @@
         <button class="btn btn-outline-success me-2" type="button">Learn More</button>
       </div>
       <div class="col-6">
-        <img src="images/image-hero-desktop.png" alt="">
+        <img class="img-fluid h-300" src="images/image-hero-desktop.png" alt="">
       </div>
     </div>
   </div>
