Fixed hero section

--- a/index.html
+++ b/index.html
@@ -60,13 +60,23 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-6">
-        <h1>Make remote work</h1>
+      <div class="col-6 d-flex align-items-center">
+        <div class="hero-section">
+          <h1 class="mb-5 fw-bolder">Make <br> remote work</h1>
 
-        <p>Get your team in sync, no matter your location. Streamline processes, 
-          create team rituals, and watch productivity soar.</p>
-        
-        <button class="btn btn-outline-success me-2" type="button">Learn More</button>
+          <p class="text-muted">Get your team in sync, no matter your location. Streamline processes, 
+            create team rituals, and watch productivity soar.</p>
+          
+          <button class="mt-5 btn btn-outline-success me-2" type="button">Learn More</button>
+
+          <div class="mt-5 d-flex">
+            <img class="me-3 h-100" src="images/client-databiz.svg" alt="">
+            <img class="me-3 h-100" src="images/client-audiophile.svg" alt="">
+            <img class="me-3 h-100" src="images/client-meet.svg" alt="">
+            <img class="me-3 h-100" src="images/client-maker.svg" alt="">
+          </div>
+
+        </div>
       </div>
       <div class="col-6">
         <img class="img-fluid h-300" src="images/image-hero-desktop.png" alt="">
