updated style design

--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
           </ul>
         </div>
         <div>
-            <button class="btn me-2" type="button"><strong>Login</strong></button>
+            <button class="btn me-2" type="button">Login</button>
             <button class="btn btn-outline-secondary rounded-3 py-2 px-3 ms-2" type="button"><strong>Register</strong></button>
         </div>
       </div>
     </nav>
   </div>
 
-  <div class="container">
+  <div class="container px-5 py-5">
     <div class="row">
       <div class="col-6 d-flex align-items-center">
-        <div class="hero-section">
-          <h1 class="mb-5 fw-bolder">Make <br> remote work</h1>
+        <div class="hero-section wrapper2">
+          <h1 class="hero-text">Make <br> remote work</h1>
 
           <p class="text-muted">Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
           
-          <button class="mt-5 btn btn-outline-success me-2" type="button">Learn More</button>
+          <button class="mt-5 btn btn-outline-secondary py-2 px-3 me-2" type="button">Learn More</button>
 
-          <div class="mt-5 d-flex">
-            <img class="me-3 h-100" src="images/client-databiz.svg" alt="">
-            <img class="me-3 h-100" src="images/client-audiophile.svg" alt="">
-            <img class="me-3 h-100" src="images/client-meet.svg" alt="">
-            <img class="me-3 h-100" src="images/client-maker.svg" alt="">
+          <div class="d-flex justify-content-start wrapper">
+            <img class="me-5 h-100" src="images/client-databiz.svg" alt="">
+            <img class="me-5 h-100" src="images/client-audiophile.svg" alt="">
+            <img class="me-5 h-100" src="images/client-meet.svg" alt="">
+            <img class="me-5 h-100" src="images/client-maker.svg" alt="">
           </div>
 
         </div>
       </div>
       <div class="col-6">
-        <img class="img-fluid h-300" src="images/image-hero-desktop.png" alt="">
+        <img class="hero-image img-fluid" src="images/image-hero-desktop.png" alt="">
       </div>
     </div>
   </div>
