added media queries

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
         </div>
       </div>
-      <div class="col-6">
-        <img class="hero-image img-fluid" src="images/image-hero-desktop.png" alt="">
+      <div class="col-6 hero-image">
+        <img class="img-fluid" src="images/image-hero-desktop.png" alt="">
       </div>
     </div>
   </div>
