updated site mobile version

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   </div>
 
   <div class="hero-container px-5 py-5">
-    <div class="row">
-      <div class="col-6 d-flex align-items-center">
-        <div class="hero-section wrapper2 order-2">
+    <div class="row mobile-row">
+      <div class="col-lg-6 d-flex align-items-center mobile-order-2">
+        <div class="hero-section wrapper2 ">
           <h1 class="hero-text">Make <br> remote work</h1>
 
           <p class="text-muted">Get your team in sync, no matter your location. Streamline processes, 
@@ -78,15 +78,11 @@
 
         </div>
       </div>
-      <div class="col-6 hero-image order-1">
-        <img class="img-fluid" src="images/image-hero-desktop.png" alt="">
+      <div class="col-lg-6 mobile-order-1">
+        <img class="img-fluid hero-image-desktop" src="images/image-hero-desktop.png" alt="">
+        <img class="img-fluid hero-image-mobile" src="images/image-hero-mobile.png" alt="">
       </div>
     </div>
-  </div>
-
-  <div class="sample container d-flex" style="background: red; height: 100px; ">
-    <div style="background: pink; height: 50px; width: 50px;" class="order-2">Flex</div>
-    <div style="background: magenta; height: 50px; width: 50px;" class="order-1">Flex</div>
   </div>
   
   <div class="attribution">
