--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   </style>
 
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid  hero-header">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <a class="navbar-brand me-5" href="#">
@@ -36,7 +37,7 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item mx-2">
-                <a class="nav-link active" aria-current="page" href="#"><strong>Features</strong></a>
+                <a class="nav-link" aria-current="page" href="#"><strong>Features</strong></a>
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link" href="#"><strong>Company</strong></a>
@@ -50,24 +51,37 @@
             </ul>
             <div class="justify-content-end">
               <button class="btn me-2" type="button">Login</button>
-            <button class="btn btn-outline-secondary rounded-3 py-2 px-3 ms-2" type="button"><strong>Register</strong></button>
-            </div>
-            
-        </div> 
-      </div>
+            <button id="register" class="btn btn-outline-secondary rounded-3 py-2 px-3 ms-2" type="button"><strong>Register</strong></button>
+            </div>    
+        </div>
     </nav>
+     <div class="feature-toggler">
+          <ul class="navmenu">
+            <li class="navitem"><i class="fa-solid fa-clipboard-check"></i><a href="#">Todo List</a></li>
+            <li class="navitem"><i class="fa-solid fa-calendar-days"></i><a href="#">Calendar</a></li>
+            <li class="navitem"><i class="fa-solid fa-bell"></i><a href="#">Reminders</a></li>
+            <li class="navitem"><i class="fa-solid fa-bullseye"></i><a href="#">Planning</a></li>
+          </ul>
+      </div>
+      <div class="company-toggler">
+        <ul>
+          <li>History</li>
+          <li>Our Team</li>
+          <li>Blog</li>
+        </ul>
+      </div>
   </div>
 
-  <div class="hero-container px-5 py-5">
+  <div class="hero-container">
     <div class="row mobile-row">
       <div class="col-lg-6 d-flex align-items-center mobile-order-2">
-        <div class="hero-section wrapper2 ">
+        <div class="d-flex hero-section wrapper2 ">
           <h1 class="hero-text">Make <br> remote work</h1>
 
           <p class="text-muted">Get your team in sync, no matter your location. Streamline processes, 
             create team rituals, and watch productivity soar.</p>
           
-          <button class="mt-5 btn btn-outline-secondary py-2 px-3 me-2" type="button">Learn More</button>
+          <button id="learnmore" class="mt-5 btn btn-outline-secondary py-2 px-3 me-2" type="button">Learn More</button>
 
           <div class="d-flex justify-content-start wrapper">
             <img class="me-5 h-100" src="images/client-databiz.svg" alt="">
@@ -78,8 +92,8 @@
 
         </div>
       </div>
-      <div class="col-lg-6 mobile-order-1">
-        <img class="img-fluid hero-image-desktop" src="images/image-hero-desktop.png" alt="">
+      <div class="img-container col-lg-6 mobile-order-1">
+        <img class="hero-image-desktop" src="images/image-hero-desktop.png" alt="">
         <img class="img-fluid hero-image-mobile" src="images/image-hero-mobile.png" alt="">
       </div>
     </div>
@@ -89,7 +103,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Jean M Altarejos</a>.
   </div>
-
-  
+<script src="./js/script.js"></script>
 </body>
 </html>
